--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mern-app",
+  "name": "LezBeFriends",
   "version": "1.0.0",
   "description": "Bootcamp Final Project - MERN Application",
   "main": "server.js",
@@ -19,6 +19,7 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
     "mongoose": "^5.9.26"
