sign in and sign up partially done with the db working

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "LezBeFriends",
+  "name": "instanote",
   "version": "1.0.0",
   "description": "Bootcamp Final Project - MERN Application",
   "main": "server.js",
